move rectangle projects